#!/usr/bin/env -Scargo run --release --manifest-path
#cargo fmt
#cargo build --release --target x86_64-pc-windows-gnu
#cross build --release --target aarch64-unknown-linux-gnu
#cross build --release --target x86_64-unknown-linux-gnu

[package]
edition = '2021'
name = 'memtest_vulkan'
version = '0.4.2'

[dependencies]
byte-strings = '0.2.2'
mortal = '0.2.3'
fs4 = '0.6.2'
chrono = '0.4.19'

[features]
verbose = []

[target.'cfg(windows)'.dependencies.windows-sys]
default-features = false
features = ['Win32_System_Console', 'Win32_Foundation', 'Win32_System_Threading']
version = '0.36.1'

[target.'cfg(unix)'.dependencies.nix]
default-features = false
features = ['signal']
version = '0.24.2'


[dependencies.erupt]
default-features = false
features = ['loading']
version = '0.22'

[dependencies.memtest_vulkan_build]
path = './memtest_vulkan_build'

[workspace]
members = ['memtest_vulkan_build']

# produce small file size release builds
[profile.release]
codegen-units = 1
lto = true
strip = true

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:main-centos"
