#!/usr/bin/env -Scargo run --release --manifest-path
#cargo fmt

[package]
edition = '2021'
name = 'memtest_vulkan'
version = '0.5.1'

[dependencies]
byte-strings = '0.2.2'
mortal = '0.2.3'
fs4 = '0.6.2'
chrono = '0.4.19'
hhmmss = "0.1.0"

[features]
verbose = []

[target.'cfg(windows)'.dependencies.windows-sys]
default-features = false
features = ['Win32_System_Console', 'Win32_Foundation', 'Win32_System_Threading']
version = '0.36.1'

[target.'cfg(unix)'.dependencies.nix]
default-features = false
features = ['signal']
version = '0.24.2'


[dependencies.erupt]
default-features = false
features = ['loading']
version = '0.23'

[dependencies.memtest_vulkan_build]
path = './memtest_vulkan_build'

[workspace]
members = ['memtest_vulkan_build']

# produce small file size release builds
[profile.release]
codegen-units = 1
lto = true
strip = true
