#!/usr/bin/env -Scargo run --release --manifest-path
#cargo fmt

[package]
edition = '2024'
name = 'memtest_vulkan'
version = '0.6.0'
rust-version = "1.89"

[dependencies]
byte-strings = '0.3.1'
mortal = '0.2.4'
chrono = '0.4.42'
hhmmss = '0.1.0'
libloading = '0.8.8'

[features]
verbose = []

[target.'cfg(windows)'.dependencies.windows-sys]
default-features = false
features = ['Win32_System_Console', 'Win32_Foundation', 'Win32_System_Threading']
version = '0.60.2'

[target.'cfg(unix)'.dependencies.nix]
default-features = false
features = ['signal']
version = '0.30.1'


[dependencies.erupt]
default-features = false
version = '0.23'

[dependencies.memtest_vulkan_build]
path = './memtest_vulkan_build'

[workspace]
members = ['memtest_vulkan_build']

# produce small file size release builds
[profile.release]
codegen-units = 1
lto = true
strip = true
